<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
            android:text="@string/main_header_title"
            style="@style/title"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="42dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="42dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/main_header_subtitle"
            style="@style/subtitle"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/leaveButton" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/new_game_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/newGameButton"
            style="@style/customButton"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/leaveButton"/>
    <Button
            android:text="@string/leave_button"
            android:layout_width="0dp"
            style="@style/customButton"
            android:layout_height="wrap_content"
            android:id="@+id/leaveButton" app:layout_constraintEnd_toEndOf="@+id/newGameButton"
            app:layout_constraintStart_toStartOf="@+id/newGameButton"
            app:layout_constraintBottom_toTopOf="@+id/textView5" android:layout_marginBottom="32dp"/>
    <TextView
            android:text="@string/developed_by"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="42dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="42dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>