<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.game.event.EventFragment">

    <TextView
            android:text="@string/game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameTitle"
            style="@style/titleGameWizard"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/game_question"
            android:ems="10"
            style="@style/subtitleGameWizard"
            android:id="@+id/gameSubtitle"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/gameTitle"
            app:layout_constraintStart_toStartOf="@+id/gameTitle" app:layout_constraintEnd_toEndOf="@+id/gameTitle"/>
    <EditText
            style="@style/customInputWizard"
            android:inputType="textPersonName"
            android:hint="@string/game_hint"
            android:ems="10"
            android:id="@+id/inputTextBroadcast"
            app:layout_constraintTop_toBottomOf="@+id/gameSubtitle"
            app:layout_constraintStart_toStartOf="@+id/gameSubtitle"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/gameTitle"/>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton"
            style="@style/customButton"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/inputTextBroadcast"
            app:layout_constraintStart_toStartOf="@+id/inputTextBroadcast"
            app:layout_constraintEnd_toEndOf="@+id/inputTextBroadcast" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>