<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.score.ScoreActivity">

    <TextView
            android:text="@string/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titleGameWizard"
            android:id="@+id/eventNameLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="46dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/home_team"
            style="@style/subtitleGameWizard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeTeamLabel"
            app:layout_constraintStart_toStartOf="@+id/homeGoalButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/homeGoalButton"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/homeGoalLabel"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/eventNameLabel"/>
    <TextView
            android:text="@string/away_team"
            style="@style/subtitleGameWizard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/awayTeamLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/awayGoalButton"
            app:layout_constraintStart_toStartOf="@+id/awayGoalButton"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/awayGoalLabel"
            app:layout_constraintTop_toTopOf="@+id/homeTeamLabel"/>
    <TextView
            android:text="0"
            style="@style/subtitleGameWizard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeGoalLabel"
            android:textSize="64sp"
            app:layout_constraintStart_toStartOf="@+id/homeGoalButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/homeGoalButton"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/homeTeamLabel"/>
    <TextView
            android:text="0"
            style="@style/subtitleGameWizard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/awayGoalLabel"
            android:textSize="64sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/awayGoalButton"
            app:layout_constraintStart_toStartOf="@+id/awayGoalButton"
            app:layout_constraintTop_toTopOf="@+id/homeGoalLabel"/>
    <Button
            android:text="@string/goal"
            style="@style/customButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/homeGoalButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/awayGoalButton"
            app:layout_constraintTop_toBottomOf="@+id/homeGoalLabel"
            android:layout_marginTop="16dp" android:layout_marginStart="32dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/goal"
            style="@style/customButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/awayGoalButton"
            app:layout_constraintStart_toEndOf="@+id/homeGoalButton"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awayGoalLabel" android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/restart_match"
            style="@style/customButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/restartMatchButton"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/homeGoalButton"
            app:layout_constraintStart_toStartOf="@+id/homeGoalButton"
            app:layout_constraintEnd_toEndOf="@+id/awayGoalButton"/>
    <Button
            android:text="@string/finish_match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/customButton"
            android:id="@+id/finishMatchButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/restartMatchButton"
            app:layout_constraintStart_toStartOf="@+id/restartMatchButton" app:layout_constraintEnd_toEndOf="@+id/restartMatchButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>